--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -1,7 +1,8 @@
 {% extends "base.html" %}
 
 {% block content %}
-    <h1>Login</h1>
+
+    <h1>Register</h1>
     <form action="" method="post" novalidate>
         {{form.hidden_tag()}}
         <p>
@@ -13,22 +14,32 @@
         </p>
 
         <p>
+            {{form.email.label}}:<br>
+            {{form.email(size=32)}}
+            {% for email_error in form.email.errors %}
+                <span style="color:red;font-weight:bold;">[{{email_error}}]</span>
+            {% endfor %}
+        </p>
+
+        <p>
             {{form.password.label}}:<br>
             {{form.password(size=32)}}
             {% for password_error in form.password.errors %}
                 <span style="color:red;font-weight:bold;">[{{password_error}}]</span>
             {% endfor %}
         </p>
-        
+            
         <p>
-            {{form.remember_me()}} {{form.remember_me.label}}
+            {{form.confirm_password.label}}:<br>
+            {{form.confirm_password(size=32)}}
+            {% for confirm_password_error in form.confirm_password.errors %}
+                <span style="color:red;font-weight:bold;">[{{confirm_password_error}}]</span>
+            {% endfor %}
         </p>
-
+        
         <p>
             {{form.submit()}}
         </p>
-    </form>
+    </form> 
 
-    <a href={{url_for('register')}}>Create New Account</a>
- 
 {% endblock %}
