--- a/app/templates/create_thread.html
+++ b/app/templates/create_thread.html
@@ -25,7 +25,7 @@
 
         <p>
             {{form.body.label}}:<br>
-            {{form.body(size=128)}}
+            {{form.body(rows=6, cols=75)}}
 
             {% for body_error in form.body.errors %}
                 <span style="color:red;font-weight:bold;">{{body_error}}</span> 
@@ -38,4 +38,3 @@
     </form>
 
 {% endblock %}
-
