--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -30,5 +30,6 @@
     </form>
 
     <a href={{url_for('register')}}>Create New Account</a>
+    <a href={{url_for('reset_password_request')}}>Reset Password</a>
  
 {% endblock %}
