--- a/app/templates/thread.html
+++ b/app/templates/thread.html
@@ -1,32 +1,30 @@
 {% extends "base.html" %}
 
-    {% block content %}
-        <table>
-            <tr><td><a href={{ url_for('subreddit', subreddit_name=subreddit.name) }}>{{ subreddit.name }}</a></td></tr>
-            <tr><td>Posted by <a href={{ url_for('user', username=author.username) }}>{{author.username}}</a> on {{ thread.date }}</td></tr> 
-            <tr><td><b>{{ thread.title }}</b></td></tr>
-            <tr><td>{{ thread.body }}</td></tr>
-            <tr>
-                <td><a href={{ url_for('view_thread', thread_title=thread.title, is_upvote=1) }}>Upvote</a></td>
-                <td><a href={{ url_for('view_thread', thread_title=thread.title, is_upvote=-1) }}>Downvote</a></td>
-            </tr>
-            <tr><td>{{ thread.upvotes }} upvotes</td></tr>
-        </table>
+    {% block app_content %}
+        {% for thread_author in thread_author_singleton %}
+            {% include "_thread.html" %}
+                    <tr><td>{{ _('%(body)s', body=thread_author[0].body) }}</td></tr>
+                    <tr>
+                        <td><a href={{ url_for('view_thread', thread_title=thread_author[0].title, is_upvote=1) }}>{{ _('Upvote') }}</a></td>
+                        <td><a href={{ url_for('view_thread', thread_title=thread_author[0].title, is_upvote=-1) }}>{{ _('Downvote') }}</a></td>
+                    </tr>
+                    <tr><td>{{ _('%(num_upvotes)s upvotes', num_upvotes=thread_author[0].upvotes) }}</td></tr>
+                </tbody>
+            </table>
+        {% endfor %}
 
         <hr>
 
-        <a href={{ url_for('add_comment') }}>Post a Comment</a>
-
-        <hr>
+        <a class="btn btn-primary" href={{ url_for('add_comment') }}>{{ _('Post a Comment') }}</a>
 
         {% for comment in comments %}
             <table>
                 <tr>
-                    <td>{{ comment.user.username }}</td>
-                    <td>{{ comment.upvotes }} upvotes</td>
-                    <td>{{ comment.date }}</td>
+                    <td>{{ _('%(username)s', username=comment.user.username) }}</td>
+                    <td>{{ _('%(num_upvotes)s upvotes', num_upvotes=comment.upvotes) }}</td>
+                    <td>{{ _('%(date)s', date=moment(comment.date).fromNow()) }}</td>
                 </tr>
-                <tr><td>{{ comment.body }}</td>
+                <tr><td>{{ _('%(body)s', body=comment.body) }}</td>
             </table><br>
         {% endfor %}
 
