--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -1,35 +1,15 @@
 {% extends "base.html" %}
+{% import "bootstrap/wtf.html" as wtf %}
 
-{% block content %}
-    <h1>Login</h1>
-    <form action="" method="post" novalidate>
-        {{form.hidden_tag()}}
-        <p>
-            {{form.username.label}}:<br>
-            {{form.username(size=32)}}
-            {% for username_error in form.username.errors %}
-                <span style="color:red;font-weight:bold;">[{{username_error}}]</span>
-            {% endfor %}
-        </p>
+{% block app_content %}
+    <h1>{{ _('Login') }}</h1>
+    <div class="row">
+        <div class="col-md-4">
+            {{ wtf.quick_form(form) }}
+        </div>
+    </div>
 
-        <p>
-            {{form.password.label}}:<br>
-            {{form.password(size=32)}}
-            {% for password_error in form.password.errors %}
-                <span style="color:red;font-weight:bold;">[{{password_error}}]</span>
-            {% endfor %}
-        </p>
-        
-        <p>
-            {{form.remember_me()}} {{form.remember_me.label}}
-        </p>
-
-        <p>
-            {{form.submit()}}
-        </p>
-    </form>
-
-    <a href={{url_for('register')}}>Create New Account</a>
-    <a href={{url_for('reset_password_request')}}>Reset Password</a>
+    <a class="btn btn-primary" href={{url_for('register')}}>{{ _('Create New Account') }}</a>
+    <a class="btn btn-primary" href={{url_for('reset_password_request')}}>{{ _('Reset Password') }}</a>
  
 {% endblock %}
