--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -1,45 +1,11 @@
 {% extends "base.html" %}
+{% import "bootstrap/wtf.html" as wtf %}
 
-{% block content %}
-
-    <h1>Register</h1>
-    <form action="" method="post" novalidate>
-        {{form.hidden_tag()}}
-        <p>
-            {{form.username.label}}:<br>
-            {{form.username(size=32)}}
-            {% for username_error in form.username.errors %}
-                <span style="color:red;font-weight:bold;">[{{username_error}}]</span>
-            {% endfor %}
-        </p>
-
-        <p>
-            {{form.email.label}}:<br>
-            {{form.email(size=32)}}
-            {% for email_error in form.email.errors %}
-                <span style="color:red;font-weight:bold;">[{{email_error}}]</span>
-            {% endfor %}
-        </p>
-
-        <p>
-            {{form.password.label}}:<br>
-            {{form.password(size=32)}}
-            {% for password_error in form.password.errors %}
-                <span style="color:red;font-weight:bold;">[{{password_error}}]</span>
-            {% endfor %}
-        </p>
-            
-        <p>
-            {{form.confirm_password.label}}:<br>
-            {{form.confirm_password(size=32)}}
-            {% for confirm_password_error in form.confirm_password.errors %}
-                <span style="color:red;font-weight:bold;">[{{confirm_password_error}}]</span>
-            {% endfor %}
-        </p>
-        
-        <p>
-            {{form.submit()}}
-        </p>
-    </form> 
-
+{% block app_content %}
+    <h1>{{ _('Register') }}</h1>
+    <div class="row">
+        <div class="col-md-4">
+            {{ wtf.quick_form(form) }}
+        </div>
+    </div>
 {% endblock %}
