--- a/app/templates/subreddit.html
+++ b/app/templates/subreddit.html
@@ -10,7 +10,7 @@
                     </tr>
      
                     <tr>
-                        <td>{{ _('%(num_upvotes)s upvotes', thread_author[0].upvotes) }}</td>
+                        <td>{{ _( ('{} upvotes'.format(thread_author[0].upvotes) ) ) }}</td>
                     </tr>
                 </tbody>
             </table>
